--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,31 @@
 @charset "UTF-8";
 /* CSS Document */
 
+body {
+    font-family: Verdana, Arial, sans-serif;
+    color:gray;
+    background:black;
+    font-size:21px;
+    text-align: center;
+
+}
+h1,h2,h3,h4,h5 {
+    color:white;
+    font-weight: 300;    
+}
+h1 {
+    font-size:50px;
+}
+h2 {
+    font-size:42px;
+}
+a {
+    color:aquamarine;
+    text-decoration: none;
+    font-size:16px;
+}
+a:hover {
+    text-decoration: underline;
+    color:aqua;
+}
+.copyright {text-align: right;}
